# alignd-data-engineering-assessment

./: .gitignore  Dockerfile  README.md  parque_to_csv_converter.py  pyproject.toml
data_files/: clients.csv  health_lapses.parquet  health_products.txt
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: dim_patients.sql
dbt_project/models/marts/: dim_patients.sql  fct_patient_claims_summary.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_clients.sql  stg_health_lapses.sql  stg_products.sql
docs/: AI_USAGE.md  TECHNICAL_DECISIONS.md
lambda/: etl_handler.py
scripts/: clean_health_products.py  load_to_postgres.py
sql/ddl/: load_data.sql  star_schema.sql
sql/transformations/: unified_dataset.sql
